--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -143,7 +143,7 @@ h1, h2 {
 #about-us h1 {
     text-align: center;
     padding: 20px;
-    box-sizing: border-box;
+    font-size: 280%;
 }
 
 #about-us {
@@ -156,7 +156,6 @@ h1, h2 {
     width: 40%;
     float: left;
     margin-left: 10%;
-    background-color: blue;
 }
 
 #about-right-container {
@@ -164,7 +163,30 @@ h1, h2 {
     width: 40%;
     float: right;
     margin-right: 10%; 
-    background-color: red;
+}
+
+#about-left-container > p {
+    margin: 100px 150px;
+}
+
+.about-button {
+    background-color: #00ADB5;
+    border: none;
+    border-radius: 10px;
+    color: #222831;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    font-weight: bolder;
+    font-size: 140%;
+    margin: auto;
+    cursor: pointer;
+}
+
+img {
+    height: 350px;
+    width: 525px;
+    margin: 100px 150px;
 }
 
 .column {
