--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -158,7 +158,6 @@ h1, h2 {
     margin-left: 10%;
     text-align: center;
     position: relative;
-    background-color: red;
 }
 
 #about-right-container {
@@ -177,7 +176,6 @@ h1, h2 {
     position: relative;
     height: 75px;
     top: -75px;
-    background-color: blue;
 }
 
 .about-button {
@@ -198,8 +196,44 @@ h1, h2 {
     transform: translate(-50%, -50%);
 }
 
+.about-button:hover {
+    border: 2px solid #00ADB5;
+    background-color: white;
+    color: #00ADB5;
+}
+
 img {
     height: 350px;
     width: 525px;
     margin: 50px 150px;
+}
+
+/* footer */
+
+.footer-container {
+    width: 100%;
+    height: 150px;
+    text-align: center;
+    align-items: center;
+    background-color: rgba(34, 40, 49, 0.7);
+    color: #00ADB5;
+}
+
+.social-footer li {
+    display: inline-block;
+    list-style-type: none;
+    margin-right: 22px;
+    margin-top: 10px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    vertical-align: middle;
+}
+
+.social-footer i {
+    font-size: 160%;
+    color: #00ADB5;
+}
+
+.social-footer i:hover {
+    opacity: 0.7;
 }
